--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "ant-design-vue": "^1.7.8",
     "core-js": "^3.6.5",
+    "node-sass": "^4.14.1",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.13"
@@ -28,6 +29,7 @@
     "element-plus": "^2.0.5",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
+    "sass-loader": "^8.0.2",
     "typescript": "~4.1.5"
   },
   "eslintConfig": {
