--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^1.1.1",
     "ant-design-vue": "^1.7.8",
     "core-js": "^3.6.5",
     "node-sass": "^4.14.1",
+    "path-to-regexp": "^6.2.0",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.13"
