--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ant-design-vue": "^1.7.8",
     "core-js": "^3.6.5",
     "node-sass": "^4.14.1",
+    "normalize.css": "^8.0.1",
     "path-to-regexp": "^6.2.0",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
