--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "@element-plus/icons-vue": "^1.1.1",
     "ant-design-vue": "^1.7.8",
     "core-js": "^3.6.5",
-    "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "path-to-regexp": "^6.2.0",
+    "sass": "^1.49.9",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
-    "vue-router": "^4.0.13"
+    "vue-router": "^4.0.13",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.18.0",
